# slip-based-walking

./: .gitignore  README.md  WORKSPACE.bazel
src/python/slip-walking/: BUILD.bazel  com_traj_plotter.py  slip-model.py  slip_simulation_test.py
src/python/slip-walking/libcmaes_api/: lcmaes_interface.py
